--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 1.5rem;
 }
 
 body {
@@ -13,7 +14,7 @@ body {
 .calculator {
     display: grid;
     place-items: center;
-    width: 300px;
+    width: 500px;
     margin: 10% auto;
     background: whitesmoke;
     padding: 10px 5px;
@@ -31,5 +32,5 @@ form div {
 }
 
 form div input {
-    width: 100px;
+    width: 150px;
 }
